--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Library Management System Using Test Driven Development(TDD)  in  Typescript(ts)",
   "main": "LMS.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest --config jest.config.ts"
   },
   "keywords": [
-     "TDD",
-     "LMS",
-     "Jest"
+    "TDD",
+    "LMS",
+    "Jest"
   ],
   "author": "vishvas patel",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
 }
