--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "target": "ES6",          // JavaScript version to compile down to
     "module": "commonjs",     // Module system
-    "outDir": "",         // Directory where compiled JavaScript will go
+    "outDir": "./dist",         // Directory where compiled JavaScript will go
     "rootDir": "",       // Directory where your TypeScript files are located
     "strict": true,           // Enable all strict type-checking options
     "esModuleInterop": true   // Enable compatibility with CommonJS and ESModules
   },
+  "include": ["./src/**/*.ts","./tests/**/*.ts", "config/db.ts"],//includes all typescript file inside the src and tests folder along with it's subdirectory
   "exclude": ["node_modules"] // Exclude node_modules from compilation
 }
